[package]
name = "sqc"
version = "0.2.1"
edition = "2021"

description = "SQL queries for collections"
homepage = "https://github.com/Anexen/sqc"
keywords = ["python", "linq", "sql", "query-engine"]
license = "MIT"
readme = "README.md"

[lib]
name = "sqc"
crate-type = ["cdylib", "rlib"]

[dependencies]
derive-visitor = "0.4"
derive_builder = "0.20"
derive_more = { version = "0.99", default-features = false, features = ["display", "from", "error"] }
indexmap = "2"
itertools = "0.13"
pyo3 = "0.21"
sqlparser = "0.47"

[dev-dependencies]
pyo3 = { version = "0.21", features = ["auto-initialize"] }
rstest = "0.21"
# serde = { version = "1", features = ["derive"] }
# serde-pyobject = "0.3.0"
