
[project]
name = "sqc"
authors = [{name = "Anexen"}]
readme = "README.md"
version = "0.1.0"
description = "SQL queries to collections"
requires-python = ">=3.7,<3.13"

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "Programming Language :: SQL",
    "Programming Language :: Python :: 3",
]

[project.urls]
Home = "https://github.com/Anexen/sqc"

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
strip = true
include = [
    { path = "pyproject.toml", format = ["sdist", "wheel"] },
    { path = "Cargo.toml", format = "sdist" },
    { path = "Cargo.lock", format = "sdist" },
    # { path = ".cargo/*", format = "sdist" },
]
